Fixed mobile news title having too much bottom margin

--- a/keski/themes/custom/scss/custom.scss
+++ b/keski/themes/custom/scss/custom.scss
@@ -362,7 +362,7 @@ footer h2 {
 	}
 
 	.news-section-title {
-		margin-bottom: 1.5em !important;
+		margin-bottom: .5em !important;
 	}
 
 	.front-page-news-date {
